@@ -3,7 +3,7 @@
 
 <html lang=en>
  <head>
-  <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title></title></head>
  <body>
   <div>
@@ -199,8 +199,8 @@ Starts with first value.
    <h2> Generated Test Class</h2></a>
   <pre>
 # Tests generated by: guppy.gsl.Tester
-# Main source file: /home/sverker/sys/guppy/specs/docexample.gsl
-# Date: Wed Oct 18 21:10:48 2006
+# Main source file: /home/sverker/guppy-pe/trunk/guppy/specs/docexample.gsl
+# Date: Mon Apr  7 12:39:48 2008
 class Tester:
     tests = {}
     def test_example_kind(self, arg):
@@ -265,5 +265,5 @@ class Tester:
         t52 = arg.m_alt(ex_1)
     tests['.tgt.docexample.example_kind'] = test_example_kind
 </pre><! --  end pre
- -->
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Oct 18 21:10:48 2006</div></body></html>
+     -->
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 12:39:48 2008</div></body></html>
