@@ -3,7 +3,7 @@
 
 <html lang=en>
  <head>
-  <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>
  Guppy-PE: A Python Programming Environment
 </title></head>
@@ -382,15 +382,40 @@ rationale and some use cases for Heapy (version 0.1).
      <td>
  Slides from the presentation.
 </td></tr></table></p><a name='Download'>
-   <h2>
- Download
-</h2></a>
-  <p> Source code in tar gzip format.</p>
+   <h2> Download</h2></a>
+  <p>
+
+The latest version is in the svn trunk directory. As of this writing,
+(2008-04-07) I have tested revision 14 successfully with 64 bits for
+Python 2.3, 2.4, and 2.5 . (Remains to test with Python 2.6) No other
+major changes than 64-bit compatibility has been made from Guppy 2.6
+version below.
+</p>
+  <p>
+In the nearest future, I plan to add some interactive help and some
+simple examples, perhaps a tutorial. Look out for this in the svn HEAD
+if you want the latest. I may make a new release (2.7) in perhaps a
+month or so.
+</p>
+  <p>
+To check out the latest (HEAD) revision, you can do:
+</p>
+  <pre>
+svn co https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
+</pre>
+  <p>
+To check out the currently tested revision, you can do:
+</p>
+  <pre>
+svn co -14 https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
+
+</pre>
+  <p> Older source code in tar gzip format.</p>
   <table>
    <tr>
     <td><a href='http://guppy-pe.sourceforge.net/guppy-0.1.6.tar.gz'> guppy-0.1.6.tar.gz</a></td>
     <td>
- Newest version. Updated 2006-10-16. Quick bug fix version,
+ Updated 2006-10-16. Doesn't work with 64 bits. -- Quick bug fix version,
 correcting the name of the Root object in the hpy instance. This is a
 kind of bug the automatic test generation should have catched, since
 it was specified with another name in the documentation, but I yet
@@ -479,4 +504,4 @@ system:
    <dd><a href='http://sourceforge.net/tracker/?group_id=105577&atid=641821'> http://sourceforge.net/tracker/?group_id=105577&amp;atid=641821</a></dd>
    <dt> The Sourceforge project summary page is:</dt>
    <dd><a href='http://sourceforge.net/projects/guppy-pe'> http://sourceforge.net/projects/guppy-pe</a></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Oct 18 21:10:48 2006</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 12:39:48 2008</div></body></html>
